--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ header>a {
     justify-content: center;
     margin: 10px;
 }
+
 #search-input {
     width: 300px;
     height: 30px;
@@ -63,22 +64,24 @@ header>a {
     background-color: #333;
     color: white;
 }
-.tabs-cards-container{
-    border: 2px solid #333;
-    margin-left: 2px;
-    margin-right: 2px;
-    margin-top: 2px;
-    
+
+.tabs-cards-container {
+    border: 4px solid #333;
+    border-radius: 6px;
+    margin: 2px 2px;
+
 }
+
 .tabs {
     display: flex;
     justify-content: center;
     gap: 10px;
-    margin-left: 40px;
-    margin-bottom: 40px;
-    
-    border-radius: 5px;
+    margin-top: 4px;
    
+    margin-bottom: 4px;
+    border-bottom: 4px solid #333;
+    border-radius: 5px;
+
 }
 
 #all-tab,
@@ -88,8 +91,9 @@ header>a {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-bottom: 4px;
 
-    
+
 }
 
 .active-tab {
@@ -141,10 +145,10 @@ header>a {
 
 #favourite-icon {
     width: 20px;
-    
+
     cursor: pointer;
     margin-top: 40px;
-    display :flex;
+    display: flex;
     place-items: center;
 }
 
@@ -152,6 +156,8 @@ header>a {
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
+    border-top: 4px solid #333;
+    border-radius: 5px;
 }
 
 
@@ -163,6 +169,9 @@ header>a {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    background-color: #333;
+    color: white;
+    margin-top: 10px;
 }
 
 footer {
